# playlist-manager

./: README.md  gitignore  pyproject.toml  setup.py
playlist_manager/: __init__.py
playlist_manager.egg-info/: PKG-INFO  SOURCES.txt
playlist_manager/api/: manager.py
playlist_manager/db/: database.py  playlists.db  seed.py
playlist_manager/models/: playlist.py  song.py
playlist_manager/utils/: decorators.py
tests/: test_api_to_db_.py  test_db.py  test_manager.py
